--- a/fastfood/src/app/pos/pos.component.html
+++ b/fastfood/src/app/pos/pos.component.html
@@ -4,11 +4,11 @@
     <form (ngSubmit)="Confirmar(form)" #form="ngForm">
       <div class="row">
         <label for="nombre">Ingrese nombre </label>
-        <input type="text" name="nombre" id="nombre" ngModel="nombre" placeholder="Ingrese su nombre"  />
+        <input type="text" name="nombre" id="nombre" ngModel placeholder="Ingrese su nombre"  />
       </div>
       <div class="row">
         <label for="pedido">Ingrese pedido </label>
-        <input type="text" id="pedido" name="pedido" ngModel="pedido" placeholder="Ingrese su pedido"  />
+        <input type="text" id="pedido" name="pedido" ngModel placeholder="Ingrese su pedido"  />
       </div>
       <button type="submit">Enviar</button>
     </form>
